tests/baselines/reference/stringLiteralTypesOverloadAssignability05.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability05.ts(16,1): error TS2322: Type '(x: "foo") => number' is not assignable to type '{ (x: "foo"): number; (x: string): number; }'.
  Type '(x: "foo") => number' provides no match for the signature '(x: string): number'


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability05.ts (1 errors) ====
    
    function f(x: "foo"): number;
    function f(x: string): number;
    function f(x: string): number {
        return 0;
    }
    
    function g(x: "foo"): number;
    function g(x: string): number {
        return 0;
    }
    
    let a = f;
    let b = g;
    
    a = b;
    ~
!!! error TS2322: Type '(x: "foo") => number' is not assignable to type '{ (x: "foo"): number; (x: string): number; }'.
!!! error TS2322:   Type '(x: "foo") => number' provides no match for the signature '(x: string): number'
    b = a;